# advent-of-code-2024

./: Cargo.toml
src/day_1/: main.rs
src/day_2/: main.rs
src/day_3/: main.rs
src/day_4/: main.rs
src/day_5/: main.rs
