[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

# Each Advent of Code day is implemented as a separate binary.
# Enter "cargo run --bin day_x" in the terminal to run the solution for day 'x'.
[[bin]]
name = "day_1"
path = "src/day_1/main.rs"

[[bin]]
name = "day_2"
path = "src/day_2/main.rs"

[[bin]]
name = "day_3"
path = "src/day_3/main.rs"